# velodyne_vlp16_description

./: CMakeLists.txt  README.md  package.xml
config/: display_urdf.rviz
launch/: load.launch  view_urdf.launch
urdf/: velodyne.urdf.xacro  velodyne_standalone.urdf  velodyne_standalone.urdf.xacro
urdf/meshes/: VLP16.dae
