<?xml version="1.0"?>
<package format="2">
  <name>velodyne_description</name>
  <version>0.0.0</version>
  <description>The velodyne_description package</description>

  <maintainer email="oguzhanbzglu@gmail.com">Oguzhan Bozoglu</maintainer>
  <author email="oguzhanbzglu@gmail.com">Oguzhan Bozoglu</author> 

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
